--- a/Archivists' App/View/SoundExplorers.View.csproj
+++ b/Archivists' App/View/SoundExplorers.View.csproj
@@ -54,11 +54,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AboutForm.cs">
+    <Compile Include="AboutView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AboutForm.Designer.cs">
-      <DependentUpon>AboutForm.cs</DependentUpon>
+    <Compile Include="AboutView.Designer.cs">
+      <DependentUpon>AboutView.cs</DependentUpon>
     </Compile>
     <Compile Include="CalendarCell.cs" />
     <Compile Include="CalendarEditingControl.cs">
@@ -86,6 +86,12 @@
     </Compile>
     <Compile Include="MainView.Designer.cs">
       <DependentUpon>MainView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MessageView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MessageView.Designer.cs">
+      <DependentUpon>MessageView.cs</DependentUpon>
     </Compile>
     <Compile Include="OptionsView.cs">
       <SubType>Form</SubType>
@@ -125,9 +131,15 @@
     </Compile>
     <Compile Include="TextBoxCell.cs" />
     <Compile Include="TextBoxContextMenu.cs" />
+    <Compile Include="TextViewBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TextViewBase.Designer.cs">
+      <DependentUpon>TextViewBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="UndoMenuItem.cs" />
-    <EmbeddedResource Include="AboutForm.resx">
-      <DependentUpon>AboutForm.cs</DependentUpon>
+    <EmbeddedResource Include="AboutView.resx">
+      <DependentUpon>AboutView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainView.resx">
       <DependentUpon>MainView.cs</DependentUpon>
