--- a/Archivists' App/Model/SoundExplorers.Model.csproj
+++ b/Archivists' App/Model/SoundExplorers.Model.csproj
@@ -1,83 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F49E2374-EF0D-46A3-AD01-6F52A5826473}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFramework>net5.0-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+
     <RootNamespace>SoundExplorers.Model</RootNamespace>
     <AssemblyName>SoundExplorers.Model</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.Entity" />
-    <Reference Include="System.Data.Linq" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ActList.cs" />
-    <Compile Include="BindingItemBase.cs" />
-    <Compile Include="DatabaseConfig.cs" />
-    <Compile Include="DatabaseConnection.cs" />
-    <Compile Include="DatabaseUpdateErrorException.cs" />
-    <Compile Include="BindingColumn.cs" />
-    <Compile Include="BindingColumnList.cs" />
-    <Compile Include="EntityListBase.cs" />
-    <Compile Include="EventBindingItem.cs" />
-    <Compile Include="EventList.cs" />
-    <Compile Include="EventTypeList.cs" />
-    <Compile Include="GenreList.cs" />
-    <Compile Include="Global.cs" />
-    <Compile Include="IBindingItem.cs" />
-    <Compile Include="IDatabaseConfig.cs" />
-    <Compile Include="IEntityList.cs" />
-    <Compile Include="IOpen.cs" />
-    <Compile Include="LocationList.cs" />
-    <Compile Include="NamedBindingItem.cs" />
-    <Compile Include="NamedEntityList.cs" />
-    <Compile Include="NewsletterBindingItem.cs" />
-    <Compile Include="NewsletterList.cs" />
-    <Compile Include="NotablyNamedBindingItem.cs" />
-    <Compile Include="NotablyNamedEntityList.cs" />
-    <Compile Include="Option.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReferenceableItemList.cs" />
-    <Compile Include="SeriesList.cs" />
-    <Compile Include="SetBindingItem.cs" />
-    <Compile Include="SetList.cs" />
-    <Compile Include="TypedBindingList.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Data\SoundExplorers.Data.csproj">
-      <Project>{eb9dd1ae-4445-45c2-bd75-b27cf5a87642}</Project>
-      <Name>SoundExplorers.Data</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\Data\SoundExplorers.Data.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations">
@@ -87,12 +20,4 @@
       <Version>9.1.2</Version>
     </PackageReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-         Other similar extension points exist, see Microsoft.Common.targets.
-    <Target Name="BeforeBuild">
-    </Target>
-    <Target Name="AfterBuild">
-    </Target>
-    -->
 </Project>
