--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -1,122 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{70A5D5EE-C1A7-48E3-A777-10435BDD84DC}</ProjectGuid>
-    <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFramework>net5.0-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+
     <RootNamespace>SoundExplorers.Tests</RootNamespace>
     <AssemblyName>SoundExplorers.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Microsoft.Synchronization" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.Entity" />
-    <Reference Include="System.Data.Linq" />
-    <Reference Include="System.Transactions" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Controller\ComboBoxCellControllerTests.cs" />
-    <Compile Include="Controller\MainControllerTests.cs" />
-    <Compile Include="Controller\MockEditorView.cs" />
-    <Compile Include="Controller\EditorControllerTests.cs" />
-    <Compile Include="Controller\MockMainGrid.cs" />
-    <Compile Include="Controller\MockView.cs" />
-    <Compile Include="Controller\OptionsControllerTests.cs" />
-    <Compile Include="Controller\SelectEditorControllerTests.cs" />
-    <Compile Include="Controller\SizeableFormOptionsControllerTests.cs" />
-    <Compile Include="Controller\TestEditorController.cs" />
-    <Compile Include="Controller\TestMainController.cs" />
-    <Compile Include="Controller\TestMainGridController.cs" />
-    <Compile Include="Controller\TestOptionsController.cs" />
-    <Compile Include="Controller\TestSizeableFormOptionsController.cs" />
-    <Compile Include="Controller\ViewFactoryTests.cs" />
-    <Compile Include="Data\ActTests.cs" />
-    <Compile Include="Data\ArtistTests.cs" />
-    <Compile Include="Data\CreditTests.cs" />
-    <Compile Include="Data\TestData.cs" />
-    <Compile Include="Data\DataTestsTemplate.cs" />
-    <Compile Include="Data\Daughter.cs" />
-    <Compile Include="Data\EntityBaseTests.cs" />
-    <Compile Include="Data\EventTests.cs" />
-    <Compile Include="Data\Father.cs" />
-    <Compile Include="Data\KeyTests.cs" />
-    <Compile Include="Data\LocationTests.cs" />
-    <Compile Include="Data\Mother.cs" />
-    <Compile Include="Data\NewsletterTests.cs" />
-    <Compile Include="Data\PieceTests.cs" />
-    <Compile Include="Data\QueryHelperTests.cs" />
-    <Compile Include="Data\ReferencingTests.cs" />
-    <Compile Include="Data\RoleTests.cs" />
-    <Compile Include="Data\SchemaTests.cs" />
-    <Compile Include="Data\SeriesTests.cs" />
-    <Compile Include="Data\SetTests.cs" />
-    <Compile Include="Data\Son.cs" />
-    <Compile Include="Data\TestSchema.cs" />
-    <Compile Include="Data\TestSession.cs" />
-    <Compile Include="Data\UserOptionTests.cs" />
-    <Compile Include="Model\BindingColumnListTests.cs" />
-    <Compile Include="Model\BindingColumnTests.cs" />
-    <Compile Include="Model\DatabaseConnectionTests.cs" />
-    <Compile Include="Model\EntityListBaseTests.cs" />
-    <Compile Include="Model\ErrorThrowingEventType.cs" />
-    <Compile Include="Model\EventListTests.cs" />
-    <Compile Include="Model\GlobalTests.cs" />
-    <Compile Include="Model\MockDatabaseConfig.cs" />
-    <Compile Include="Model\MockDatabaseConnection.cs" />
-    <Compile Include="Model\NamedEntityListTests.cs" />
-    <Compile Include="Model\NewsletterListTests.cs" />
-    <Compile Include="Model\OptionTests.cs" />
-    <Compile Include="Model\ReferenceableItemListTests.cs" />
-    <Compile Include="Model\SetListTests.cs" />
-    <Compile Include="Model\TestDatabaseConfig.cs" />
-    <Compile Include="Model\TestDatabaseConnection.cs" />
-    <Compile Include="Model\TestOption.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestDatabaseGenerator.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Controller\SoundExplorers.Controller.csproj">
-      <Project>{1df40f87-9462-4211-9f51-a15af63cb6ae}</Project>
-      <Name>SoundExplorers.Controller</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Data\SoundExplorers.Data.csproj">
-      <Project>{eb9dd1ae-4445-45c2-bd75-b27cf5a87642}</Project>
-      <Name>SoundExplorers.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Model\SoundExplorers.Model.csproj">
-      <Project>{f49e2374-ef0d-46a3-ad01-6f52a5826473}</Project>
-      <Name>SoundExplorers.Model</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\Controller\SoundExplorers.Controller.csproj" />
+    <ProjectReference Include="..\Data\SoundExplorers.Data.csproj" />
+    <ProjectReference Include="..\Model\SoundExplorers.Model.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations">
@@ -135,12 +31,4 @@
       <Version>9.1.2</Version>
     </PackageReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-         Other similar extension points exist, see Microsoft.Common.targets.
-    <Target Name="BeforeBuild">
-    </Target>
-    <Target Name="AfterBuild">
-    </Target>
-    -->
 </Project>
