--- a/Archivists' App/View/SoundExplorers.View.csproj
+++ b/Archivists' App/View/SoundExplorers.View.csproj
@@ -1,207 +1,37 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{09F2F432-DC9E-4638-9D5E-69753732150E}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <TargetFramework>net5.0-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+
     <RootNamespace>SoundExplorers.View</RootNamespace>
     <AssemblyName>SoundExplorers.View</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AboutView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AboutView.Designer.cs">
-      <DependentUpon>AboutView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CalendarCell.cs" />
-    <Compile Include="CalendarEditingControl.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="ComboBoxCell.cs" />
-    <Compile Include="ComboBoxEditingControl.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="CopyMenuItem.cs" />
-    <Compile Include="CutMenuItem.cs" />
-    <Compile Include="DeleteMenuItem.cs" />
-    <Compile Include="DeleteSelectedRowsMenuItem.cs" />
-    <Compile Include="FittedPictureBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="GridBase.cs" />
-    <Compile Include="GridContextMenu.cs" />
-    <Compile Include="EditContextMenuBase.cs" />
-    <Compile Include="IMessageUpdater.cs" />
-    <Compile Include="ICanRestoreErrorValue.cs" />
-    <Compile Include="MainGrid.cs" />
-    <Compile Include="MainView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MainView.Designer.cs">
-      <DependentUpon>MainView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MessageView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MessageView.Designer.cs">
-      <DependentUpon>MessageView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="OptionsView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="OptionsView.Designer.cs">
-      <DependentUpon>OptionsView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ParentGrid.cs" />
-    <Compile Include="PasteMenuItem.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectAllMenuItem.cs" />
-    <Compile Include="SelectEditorView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SelectEditorView.Designer.cs">
-      <DependentUpon>SelectEditorView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SelectRowMenuItem.cs" />
-    <Compile Include="SizeableFormOptions.cs" />
-    <Compile Include="SplashForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SplashForm.Designer.cs">
-      <DependentUpon>SplashForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SplashFormBase.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SplashManager.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="EditorView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="EditorView.Designer.cs">
-      <DependentUpon>EditorView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TextBoxCell.cs" />
-    <Compile Include="TextBoxContextMenu.cs" />
-    <Compile Include="TextViewBase.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TextViewBase.Designer.cs">
-      <DependentUpon>TextViewBase.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UndoMenuItem.cs" />
-    <EmbeddedResource Include="AboutView.resx">
-      <DependentUpon>AboutView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MainView.resx">
-      <DependentUpon>MainView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="OptionsView.resx">
-      <DependentUpon>OptionsView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SelectEditorView.resx">
-      <DependentUpon>SelectEditorView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SplashForm.resx">
-      <DependentUpon>SplashForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="EditorView.resx">
-      <DependentUpon>EditorView.cs</DependentUpon>
-    </EmbeddedResource>
-    <None Include="Images\Actions Document New 16x16.png" />
-    <None Include="Images\Actions Document New 32x32.png" />
-    <None Include="Images\Actions Document New 48x48.png" />
-    <None Include="Images\Actions Document Open 16x16.png" />
-    <None Include="Images\Actions Document Open 32x32.png" />
-    <None Include="Images\Actions Document Open 48x48.png" />
-    <None Include="Images\Actions Edit Copy 16x16.png" />
-    <None Include="Images\Actions Edit Copy 32x32.png" />
-    <None Include="Images\Actions Edit Copy 48x48.png" />
-    <None Include="Images\Actions Edit Cut 16x16.png" />
-    <None Include="Images\Actions Edit Cut 32x32.png" />
-    <None Include="Images\Actions Edit Cut 48x48.png" />
-    <None Include="Images\Actions Edit Paste 16x16.png" />
-    <None Include="Images\Actions Edit Paste 32x32.png" />
-    <None Include="Images\Actions Edit Paste 48x48.png" />
-    <None Include="Images\Actions View Refresh 16x16.png" />
-    <None Include="Images\Actions View Refresh 32x32.png" />
-    <None Include="Images\Actions View Refresh 48x48.png" />
-    <None Include="Images\Copy Flatastic 32x32.png" />
-    <None Include="Images\Cut Flatastic 32x32.png" />
-    <None Include="Images\Devices Video Display 16x16.png" />
-    <None Include="Images\Devices Video Display 32x32.png" />
-    <None Include="Images\Devices Video Display 48x48.png" />
-    <None Include="Images\Fred Flintstone.jpg" />
-    <None Include="Images\Help and Support 16x16.png" />
-    <None Include="Images\Help and Support 32x32.png" />
-    <None Include="Images\Help and Support 48x48.png" />
-    <None Include="Images\Music Library 16x16.png" />
-    <None Include="Images\Music Library 32x32.png" />
-    <None Include="Images\Music Library 48x48.png" />
-    <None Include="Images\News 16x16.png" />
-    <None Include="Images\News 32x32.png" />
-    <None Include="Images\News 48x48.png" />
-    <None Include="Images\Paste Flatastic 32x32.png" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Compile Include="Properties\Resources.Designer.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
+    <Compile Update="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Controller\SoundExplorers.Controller.csproj">
-      <Project>{1df40f87-9462-4211-9f51-a15af63cb6ae}</Project>
-      <Name>SoundExplorers.Controller</Name>
-    </ProjectReference>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+    </Compile>
+  </ItemGroup>  <ItemGroup>
+    <ProjectReference Include="..\Controller\SoundExplorers.Controller.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations">
@@ -211,5 +41,4 @@
       <Version>1.1.7</Version>
     </PackageReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
