--- a/Archivists' App/SoundExplorers/app.config
+++ b/Archivists' App/SoundExplorers/app.config
@@ -1,3 +1,4 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
+<startup>
+</startup></configuration>
