--- a/Archivists' App/SoundExplorers/SoundExplorers.csproj
+++ b/Archivists' App/SoundExplorers/SoundExplorers.csproj
@@ -7,6 +7,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <RootNamespace>SoundExplorers</RootNamespace>
     <AssemblyName>SoundExplorers</AssemblyName>
+    <ApplicationIcon>Fred Flintstone.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Fred Flintstone.ico" />
